  - obsplus.validate
    * Added the obsplus.validate module which contains a simple framework for
      defining and running validators on python objects. Replaced the old
      event validation (see #122).
    * Added the validators created in (#64) to PR (#122).
  - obsplus.events
    * Dataframe_to_inventory can now fetch NRL responses (#125).
  - obsplus.waveforms
    * Added assert_streams_almost_equal method (see #128).
    * The function obsplus.waveforms.stream_split_bulk now has more flexible
      inputs (see #128).
  - general
    * All obsplus objects now use pandas datetimes and/or numpy datetime64 for
      representing dates and times (see #88 and #131).

obsplus 0.0.2:
  - obsplus.bank
    * Speed up wavebank.get_waveforms_bulk by time-filtering index before
      determining which files to read (see #93).
    * Update time is now set before reading files to update index (#95).
    * add try/except in read index to alleviate test failures with concurrent
      updates (see #101).
  - obsplus.conversions
    * Added a preserve_units flag to project and ensured forward compatibility
      with pyproj 2.x.x.
  - obsplus.DataFrameExtractor
    * Fixed a bug where objects with None attributes were being represented with
      'None' rather than '' when converted to str (see #99).
  - obsplus.datasets.crandall
    * Deleted EventDescriptions whose text was set to 'None' (see #99).
      NOTE: This change requires re-downloading the dataset to properly take
      effect!
  - obsplus.datasets.dataset
    * Renamed from obsplus.datasets.dataloader (#100)
    * Added a version numbering scheme to DataSet to enforce that the version of
      a downloaded dataset matches what is required by the DataSet (#100).
    * Changed where the datasets are stored. By default they will be stored in
      a directory called obspdata in the users home, but this can be changed
      using an environmental variable (#100).